# blog

./: .gitignore  CNAME  _config.yml  tags.html
_includes/: archive.html  home.html  menu.html
_layouts/: default.html  tag.html
_posts/: 2017-01-01-advanced-examples.md  2017-02-01-markdown-examples.md  2017-03-01-welcome-to-jekyll.md  2023-05-01-tok3n-00-staticstring.md  2023-05-13-tok3n-01-anyof.md  2023-05-13-tok3n-01-onechar.md  2023-06-08-tok3n-02-compiler-error.md  2023-07-27-tok3n-03-parser-concept.md  2024-06-02-boost-00-natvis-for-unordered.md  2024-06-10-boost-01-natvis-for-unordered-2.md  2024-07-11-boost-01-natvis-for-unordered-2.md  2024-07-15-boost-01-natvis-for-unordered-2.md  2024-08-16-boost-02-pretty-printer.md  2024-09-14-misc-00-sfinae-apply.md  2024-10-13-boost-03-natvis-testing.md  2025-01-04-misc-01-forward-in-concept.md  2025-08-28-pretty-printer-libcxx.md  2025-10-05-buffalo-buffalo.md  2025-12-27-msvc-versions.md  2025-12-28-msvc-versions.md  2026-07-05-msvc-clang.md
_sass/: basic.sass  classes.sass  index.sass  layout.sass
_tags/: boost.md  k3tchup.md  natvis.md  pretty-print.md  tok3n.md
assets/css/: frame.sass
assets/posts/tok3n/00-StaticString/: CMakeLists.txt  main.cpp
assets/posts/tok3n/00-StaticString/include/: StaticString.h
assets/posts/tok3n/01-AnyOf/: CMakeLists.txt  main.cpp
assets/posts/tok3n/01-AnyOf/include/: AnyOf.h
assets/posts/tok3n/02-FirstCompilerBug/: CMakeLists.txt  main.cpp
assets/posts/tok3n/02-FirstCompilerBug/include/: AnyOf.h  (+1 more)
assets/posts/tok3n/03-ParserConcept/: CMakeLists.txt  main.cpp
(+4 files in other folders)
